lib_LTLIBRARIES = libUnitTest++.la
pkgincludedir = $(includedir)/UnitTest++
nobase_pkginclude_HEADERS = UnitTest++.h Config.h Test.h TestDetails.h TestList.h TestSuite.h TestResults.h TestMacros.h CheckMacros.h TestRunner.h TimeConstraint.h ExecuteTest.h AssertException.h MemoryOutStream.h CurrentTest.h Posix/SignalTranslator.h Checks.h TimeHelpers.h Posix/TimeHelpers.h
libUnitTest___la_SOURCES = AssertException.cpp Test.cpp Checks.cpp TestRunner.cpp TestResults.cpp TestReporter.cpp TestReporterStdout.cpp ReportAssert.cpp TestList.cpp TimeConstraint.cpp TestDetails.cpp MemoryOutStream.cpp DeferredTestReporter.cpp DeferredTestResult.cpp XmlTestReporter.cpp CurrentTest.cpp Posix/SignalTranslator.cpp Posix/TimeHelpers.cpp
libUnitTest___la_LDFLAGS = -version-number @LIBUNITTEST_SO_VERSION@
check_PROGRAMS = TestUnitTest++
TestUnitTest___SOURCES = tests/Main.cpp tests/TestAssertHandler.cpp tests/TestChecks.cpp tests/TestUnitTest++.cpp tests/TestTest.cpp tests/TestTestResults.cpp tests/TestTestRunner.cpp tests/TestCheckMacros.cpp tests/TestTestList.cpp tests/TestTestMacros.cpp tests/TestTimeConstraint.cpp tests/TestTimeConstraintMacro.cpp tests/TestMemoryOutStream.cpp tests/TestDeferredTestReporter.cpp tests/TestXmlTestReporter.cpp tests/TestCurrentTest.cpp
TestUnitTest___LDADD = libUnitTest++.la
TESTS = TestUnitTest++
